# aquant

./: .gitignore  .ruff.toml  ARCHITECTURE_OPTIMIZATION.md  ASYNC_ANALYSIS.md  CLAUDE.md  COMPLETION_SUMMARY.md  DESIGN.md  FINAL_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STATUS.md  README.md  REFACTOR_IMPLEMENTATION.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  REQUIREMENTS.md  SIGNAL_VS_ORDER_MODE.md  TASK_COMPLETION_REPORT.md  demo_report.html  main.py  mkdocs.yml  momentum_acceleration_report.html  prek.toml  pyproject.toml  taplo.toml  ty.toml  uv.toml
aquant/: __init__.py  cli.py  log.py
aquant/adjustment/: adjuster.py  corporate.py
aquant/alert/: __init__.py  channels.py  notifier.py
aquant/analytics/: metrics.py  report.py
aquant/broker/: __init__.py  adapter.py  simulated.py
aquant/core/: context.py  context_pool.py  engine.py  pydantic_base.py
aquant/data/: __init__.py  alds.py  bigquant.py  csv.py  manager.py  preloader.py  source.py
aquant/events/: __init__.py  bus.py  event.py  queue.py
aquant/live/: alerts.py  engine.py  order_manager.py
aquant/market/: bar.py  calendar.py  universe.py
aquant/matching/: cost.py  guards.py  matcher.py  order.py  (+1 more)
benchmark/: benchmark_backtest.py  profile_backtest.py
benchmarks/: README.md  parallel_backtest.py  performance_benchmark.py  profile_engine.py
docs/: alert.md  api_reference.md  architecture.md  best_practices.md  cli.md  examples.md  index.md  live_trading.md  optimization.md  performance.md  performance_analysis.md  quickstart.md  testing.md  tools.md  tutorial.md
examples/: ADVANCED_STRATEGIES.md  benchmark.py  bollinger_bands.py  demo.py  dual_moving_average.py  live_trading.py  mean_reversion_strategy.py  momentum_acceleration.py  multi_factor_strategy.py  pairs_trading_strategy.py  preload_demo.py  progress_bar_demo.py  risk_controlled_momentum.py  strategy_comparison_demo.py  tools_demo.py
tests/: test_alert.py  test_alerts.py  test_asset_type.py  test_broker.py  test_data_manager.py  test_engine.py  test_genetic_algorithm.py  test_grid_search.py  test_integration.py  test_order_manager.py  test_profiler.py  test_query.py  test_risk.py  test_strategy_compare.py  test_trading_rules.py  test_walk_forward.py
tools/: benchmark.py
(+300 files in other folders)
