[project]
    dependencies    = ["bigquantdai>=1.0.9", "polars>=1.41.2", "pydantic>=2.0", "structlog>=26.1.0"]
    description     = "Add your description here"
    name            = "aquant"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "0.1.0"

[dependency-groups]
    dev = ["ruff>=0.15.16"]

[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]
