[project]
    dependencies    = ["polars>=1.41.2", "pydantic>=2.0", "structlog>=26.1.0", "tqdm>=4.69.0"]
    description     = "Add your description here"
    name            = "aquant"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "0.1.0"

[project.scripts]
    aquant = "aquant.cli:main"

[dependency-groups]
    dev = ["mkdocs-material>=9.7.7", "mkdocs>=1.6.1", "mkdocstrings[python]>=1.0.6", "pytest>=9.1.1", "ruff>=0.15.16", "ty>=0.0.48"]

[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]

[tool.pytest.ini_options]
    addopts          = ["--strict-markers", "--tb=short", "-v"]
    python_classes   = ["Test*"]
    python_files     = ["test_*.py"]
    python_functions = ["test_*"]
    testpaths        = ["tests"]

[[tool.ty.overrides]]
    include = ["aquant/data/alds.py"]
    rules   = { unresolved-import = "ignore" }
